--- a/03_word_representations_gensim/01_gensim_word2vect.ipynb
+++ b/03_word_representations_gensim/01_gensim_word2vect.ipynb
@@ -913,6 +913,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.most_similar(positive=['good'], negative=['bad'], topn=5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.most_similar(positive=['bad'], negative=['good'], topn=5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {
     "colab": {
