--- a/05_template_homework.ipynb
+++ b/05_template_homework.ipynb
@@ -8,10 +8,9 @@
     "\n",
     "\n",
     "## Task\n",
-    "- Classify each document in one of 20 categories.\n",
-    "- The objective is obtain the better accuracy in the test set. You can use any library and model explained in the course.\n",
-    "- The delivery are a unique jupiter notebook with all the code. Must run in the course Anaconda environment. Not use additional libraries.\n",
-    "- Send the notebook named homework\\_[name]\\_[surename].ipynb to sueiras@gmail.com before November 20th.\n",
+    "- TRain a classifier for the 20newsgroups dataset. Classify each document inthe dataset in one of the 20 categories availables.\n",
+    "- The objective is get the better accuracy in the test set. You can use any library and model of the course.\n",
+    "- The delivery are once jupiter notebook with all the code. Must work in the course Anaconda environment. Don't use additional libraries.\n",
     "\n",
     "## Template structure\n",
     "\n",
@@ -21,7 +20,7 @@
     "  - Model: Build your model or models here. Check the accuracy over the validation set.\n",
     "  - Evaluate results: Build your scoring function here and apply it over the test set.\n",
     "- You need to complete the transform and model steps to achieve the best result in the evaluation metric, the accuracy, in test set.\n",
-    "- Is completely forbidden load and use the test set except once in the final evaluate results step.\n",
+    "- Is forbidden to load and use the test dataset except once in the final evaluate results step.\n",
     "\n",
     "## Evaluation\n",
     "\n",
@@ -29,7 +28,11 @@
     "- To obtain 5 points you must deliver a notebook without errors that provide a solution whit a minimum accuracy of 67%.\n",
     "- If you obtain an accuracy over 87% you have 10 points.\n",
     "- Intermediated accuracies between 67% and 87% obtain intermediated points proportionally, but depending of the quality of the work is possible to reduce or increase a maximum of 2 the points assigned automatically by accuracy. \n",
-    " "
+    " \n",
+    " \n",
+    "## Tips\n",
+    "- Optionaly you can include the headers, footers and quotes of the dataset.\n",
+    "- When you have decidec your final \n"
    ]
   },
   {
@@ -853,7 +856,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -867,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
