--- a/05_template_homework.ipynb
+++ b/05_template_homework.ipynb
@@ -8,18 +8,18 @@
     "\n",
     "\n",
     "## Task\n",
-    "- TRain a classifier for the 20newsgroups dataset. Classify each document inthe dataset in one of the 20 categories availables.\n",
-    "- The objective is get the better accuracy in the test set. You can use any library and model of the course.\n",
-    "- The delivery are once jupiter notebook with all the code. Must work in the course Anaconda environment. Don't use additional libraries.\n",
+    "- Train a classifier for the 20newsgroups dataset. Classify each document in the dataset in one of the 20 categories availables.\n",
+    "- The objective is get the better accuracy in the test set. You can use any library and model viewed in the course.\n",
+    "- The delivery are once jupiter notebook with all the code. Must run in colab.\n",
     "\n",
     "## Template structure\n",
     "\n",
     "- A Jupiter notebook template is provided to do the task. Structure:\n",
     "  - Read the train and validation data.\n",
-    "  - Transform to generate numerical features.: Build your transformations here\n",
-    "  - Model: Build your model or models here. Check the accuracy over the validation set.\n",
+    "  - Transform to generate numerical features.: Build your own transformations here\n",
+    "  - Model: Build your own model or models here. Check the accuracy over the validation set.\n",
     "  - Evaluate results: Build your scoring function here and apply it over the test set.\n",
-    "- You need to complete the transform and model steps to achieve the best result in the evaluation metric, the accuracy, in test set.\n",
+    "- You need to complete the transform and model steps to achieve the best result in the evaluation metric, the accuracy in test set.\n",
     "- Is forbidden to load and use the test dataset except once in the final evaluate results step.\n",
     "\n",
     "## Evaluation\n",
@@ -27,12 +27,17 @@
     "- Exercise evaluated in 0-10 range points.\n",
     "- To obtain 5 points you must deliver a notebook without errors that provide a solution whit a minimum accuracy of 67%.\n",
     "- If you obtain an accuracy over 87% you have 10 points.\n",
-    "- Intermediated accuracies between 67% and 87% obtain intermediated points proportionally, but depending of the quality of the work is possible to reduce or increase a maximum of 2 the points assigned automatically by accuracy. \n",
-    " \n",
-    " \n",
+    "- Intermediated accuracies between 67% and 87% obtain intermediated points proportionally.\n",
+    "- Extra points. Is possible to get 2 extra points (until the max on 10 points)\n",
+    "  - An extra point if one of the models tested is made with tensorflow-keras.\n",
+    "  - An extra point if one of the models tested uses pretrained embbedings. \n",
+    "- Reduced points:\n",
+    "  - One point is reduced if only one model is tested.\n",
+    "\n",
+    "\n",
     "## Tips\n",
     "- Optionaly you can include the headers, footers and quotes of the dataset.\n",
-    "- When you have decidec your final \n"
+    "- When you have selected your final model to apply the test evaluation, you can train this final model with all the train and validation data before to test it. \n"
    ]
   },
   {
